# FastApi

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
app/: __init__.py  alembic.ini
app/migrations/: env.py
app/migrations/versions/: b657f9845570_add_categories_table.py
app/models/: categories.py  connection.py  models.py
app/routers/: router.py
app/test/schemas/: test_category.py
