[tool.poetry]
name = "projectfastapi"
version = "0.1.0"
description = ""
authors = ["Auggustto <leonardoaugusto1000a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.2"
alembic = "^1.13.1"
python-decouple = "^3.8"
psycopg2 = "^2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
